# chouchou-forcasting

./: Dockerfile  README.md  pyproject.toml  shell.nix
chouchou_analytics/: analysis.ipynb
python_template_project/: analysis.ipynb
