[tool.poetry]
name = "chouchou_analytics"
version = "0.1.0"
description = "Python template project"
authors = ["Sfeir Bureau d'études <ft-bureaudetude@sfeir.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1.4.2"
jupyterlab = "^3.4.2"
matplotlib = "^3.5.2"
numpy = "^1.22.4"
tensorflow = "^2.9.1"
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
